generated/checker-for-evaluation/generated/test-Misuse-ec1aae190c7729ffdd3603de311dc00f7ff988f9/build_logs/3/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:17:17: error: ‘taint’ is not a namespace-name
   17 | using namespace taint;
      |                 ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::EventVisitor::VisitCallExpr(clang::CallExpr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:51:63: error: invalid initialization of non-const reference of type ‘clang::ento::CheckerContext&’ from an rvalue of type ‘std::nullptr_t’
   51 |     if (!ExprHasName(OriginExpr, "memcpy", /*CheckerContext*/ nullptr)) {
      |                                                               ^~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:12:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:104:65: note: in passing argument 3 of ‘bool ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’
  104 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |                                                 ~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:71:59: error: invalid initialization of non-const reference of type ‘clang::ento::CheckerContext&’ from an rvalue of type ‘std::nullptr_t’
   71 |       if (ExprHasName(DestArg, "data", /*CheckerContext*/ nullptr)) {
      |                                                           ^~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:12:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:104:65: note: in passing argument 3 of ‘bool ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’
  104 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |                                                 ~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportBug(const clang::Decl*, clang::ento::BugReporter&, clang::SourceLocation, clang::SourceLocation) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:156:50: error: cannot convert ‘clang::CharSourceRange’ to ‘clang::SourceRange’
  156 |   Report->addRange(CharSourceRange::getTokenRange(memcpyLoc, memcpyLoc));
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
      |                                                  |
      |                                                  clang::CharSourceRange
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:7:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:222:29: note:   initializing argument 1 of ‘void clang::ento::BugReport::addRange(clang::SourceRange)’
  222 |   void addRange(SourceRange R) {
      |                 ~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:157:50: error: cannot convert ‘clang::CharSourceRange’ to ‘clang::SourceRange’
  157 |   Report->addRange(CharSourceRange::getTokenRange(datalenLoc, datalenLoc));
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
      |                                                  |
      |                                                  clang::CharSourceRange
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:7:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:222:29: note:   initializing argument 1 of ‘void clang::ento::BugReport::addRange(clang::SourceRange)’
  222 |   void addRange(SourceRange R) {
      |                 ~~~~~~~~~~~~^
In file included from /usr/include/c++/11/memory:76,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/DiagnosticIDs.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/Diagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/NestedNameSpecifier.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Type.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/CanonicalType.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ASTContext.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/usr/include/c++/11/bits/unique_ptr.h: In instantiation of ‘typename std::_MakeUniq<_Tp>::__single_object std::make_unique(_Args&& ...) [with _Tp = clang::ento::BugReport; _Args = {clang::ento::BugType&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, clang::ento::PathDiagnosticLocation&}; typename std::_MakeUniq<_Tp>::__single_object = std::unique_ptr<clang::ento::BugReport>]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:154:44:   required from here
/usr/include/c++/11/bits/unique_ptr.h:962:30: error: invalid new-expression of abstract class type ‘clang::ento::BugReport’
  962 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:7:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:119:7: note:   because the following virtual functions are pure within ‘clang::ento::BugReport’:
  119 | class BugReport {
      |       ^~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:173:34: note:     ‘virtual clang::ento::PathDiagnosticLocation clang::ento::BugReport::getLocation() const’
  173 |   virtual PathDiagnosticLocation getLocation() const = 0;
      |                                  ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:178:23: note:     ‘virtual const clang::Decl* clang::ento::BugReport::getDeclWithIssue() const’
  178 |   virtual const Decl *getDeclWithIssue() const = 0;
      |                       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:189:34: note:     ‘virtual clang::ento::PathDiagnosticLocation clang::ento::BugReport::getUniqueingLocation() const’
  189 |   virtual PathDiagnosticLocation getUniqueingLocation() const = 0;
      |                                  ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:195:23: note:     ‘virtual const clang::Decl* clang::ento::BugReport::getUniqueingDecl() const’
  195 |   virtual const Decl *getUniqueingDecl() const = 0;
      |                       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:248:16: note:     ‘virtual void clang::ento::BugReport::Profile(llvm::FoldingSetNodeID&) const’
  248 |   virtual void Profile(llvm::FoldingSetNodeID& hash) const = 0;
      |                ^~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
